--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@parametricos/bcf-js": "^0.1.3",
+    "@react-three/drei": "^9.16.0",
+    "@react-three/fiber": "^8.0.27",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
@@ -20,6 +22,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "framer-motion": "^6.4.2",
     "next": "12.2.0",
     "next-transpile-modules": "^9.0.0",
     "prop-types": "^15.8.1",
