--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.1",
     "react-spring": "^9.4.5",
+    "react-tsparticles": "^2.1.4",
     "three": "^0.142.0",
+    "tsparticles": "^2.1.4",
     "typescript": "^4.7.4",
     "web-ifc-viewer": "^1.0.206",
     "web-vitals": "^2.1.4"
