--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/material": "^5.10.1",
     "@parametricos/bcf-js": "^0.1.3",
     "@react-three/drei": "^9.16.0",
     "@react-three/fiber": "^8.0.27",
