--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "1.0.1": "^1.0.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/material": "^5.10.1",
+    "@next-auth/firebase-adapter": "1.0.1",
     "@parametricos/bcf-js": "^0.1.3",
     "@react-three/drei": "^9.16.0",
     "@react-three/fiber": "^8.0.27",
@@ -25,13 +27,16 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "firebase": "^9.14.0",
     "framer-motion": "^6.4.2",
     "next": "12.2.0",
+    "next-auth": "^4.17.0",
     "next-transpile-modules": "^9.0.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.1",
+    "react-lottie": "^1.2.3",
     "react-spring": "^9.4.5",
     "react-tsparticles": "^2.1.4",
     "three": "^0.142.0",
