--- a/.env
+++ b/.env
@@ -1,13 +1,24 @@
-FIREBASE_API_KEY=AIzaSyBTyOevyECDxUswcpW52k3AJIS4Nnp8A0s
-FIREBASE_APP_ID=1:586442091069:web:b3451332db890a95c59854
-FIREBASE_AUTH_DOMAIN=fir-form-demo1.firebaseapp.com
-FIREBASE_PROJECT_ID=fir-form-demo1
-FIREBASE_STORAGE_BUCKET=fir-form-demo1.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=586442091069
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyD7qxw5lA5WEDZ4wRAEp-NgleSpIo1yIW0
+NEXT_PUBLIC_FIREBASE_APP_ID=1:846920427163:web:dce322d35fe7854616883e
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=iotoad-2643b.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=iotoad-2643b
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=iotoad-2643b.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=846920427163
 
-
-GOOGLE_CLIENT_ID=420513810950-cbos5og4n1tounsk27j9i2bc7s1ouc1l.apps.googleusercontent.com
+# 846920427163-pv175lnmmml1agdlaj53m6t364t431ip.apps.googleusercontent.com
+# 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 
+GOOGLE_CLIENT_ID=846920427163-pv175lnmmml1agdlaj53m6t364t431ip.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 
 NEXTAUTH_URL=http://localhost:3000
-JWT_SECRET=eeeb4eed5b94524e2c4bo12470a919bc
+JWT_SECRET=eeeb4eed5b94524e2c4bo12470a919bc 
+
+
+
+#  apiKey: "AIzaSyD7qxw5lA5WEDZ4wRAEp-NgleSpIo1yIW0",
+#   authDomain: "iotoad-2643b.firebaseapp.com",
+#   projectId: "iotoad-2643b",
+#   storageBucket: "iotoad-2643b.appspot.com",
+#   messagingSenderId: "846920427163",
+#   appId: "1:846920427163:web:dce322d35fe7854616883e",
+#   measurementId: "G-HSFZ97SCT2"
