--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "1.0.1": "^1.0.0",
+    "@eduardoricardez/react-firebaseui": "^1.0.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@material-ui/core": "^4.12.4",
@@ -24,29 +25,32 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "firebase": "^9.14.0",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.6.7",
     "framer-motion": "^6.4.2",
+    "js-cookie": "^3.0.1",
     "next": "12.2.0",
-    "next-auth": "^4.17.0",
     "next-transpile-modules": "^9.0.0",
+    "ngrok": "^4.3.3",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
     "react-lottie": "^1.2.3",
+    "react-native-firebaseui": "^0.3.0",
     "react-spring": "^9.4.5",
     "react-tsparticles": "^2.1.4",
     "three": "^0.142.0",
     "tsparticles": "^2.1.4",
-    "typescript": "^4.7.4",
     "web-ifc-viewer": "^1.0.206",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.0"
+    "@types/node": "17.0.21",
+    "@types/react": "^18.0.26",
+    "eslint": "8.10.0",
+    "eslint-config-next": "12.1.0",
+    "typescript": "4.5.5"
   }
 }
